Backport of all the 1.18.2 features Everything got backported except goml compat, since it for some reason didn't work.